--- a/django-backend/static/css/style.css
+++ b/django-backend/static/css/style.css
@@ -76,8 +76,8 @@ body {
     padding-top: .75rem;
     padding-bottom: .75rem;
     font-size: 1rem;
-    background-color: rgba(0, 0, 0, .25);
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+    background-color: rgba(119, 118, 33, 0.25);
+    box-shadow: inset -1px 0 0 rgba(153, 45, 45, 0.25);
 }
 
 .navbar .navbar-toggler {
@@ -93,11 +93,11 @@ body {
 
 .form-control-dark {
     color: #fff;
-    background-color: rgba(255, 255, 255, .1);
-    border-color: rgba(255, 255, 255, .1);
+    background-color: rgba(182, 26, 26, 0.1);
+    border-color: rgba(106, 112, 23, 0.1);
 }
 
 .form-control-dark:focus {
     border-color: transparent;
-    box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+    box-shadow: 0 0 0 3px rgba(65, 15, 105, 0.25);
 }
