--- a/django-backend/templates/panel/profesores.html
+++ b/django-backend/templates/panel/profesores.html
@@ -7,7 +7,7 @@
         <div class="position-sticky pt-3">
             <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">
+                <a class="nav-link" href="/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home" aria-hidden="true"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
                 Dashboard
                 </a>
@@ -19,7 +19,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/panel/alumnos">
+                <a class="nav-link" href="/panel/profesores">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart" aria-hidden="true"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
                 Profesores
                 </a>
@@ -29,7 +29,50 @@
         </nav>
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-        <h3>Menu principal</h3>
+        <h3>Listado de Profesores</h3>
+        <div class="row mt-2">
+            <div class="col-md-2">
+                <a class="btn btn-success" href="panel/form-profesor" >
+                    <i class="fa fa-plus-circle"></i> Nuevo registro
+                </a>
+            </div>
+            <div class="col-md-5">
+                <form method="GET" action="">
+                    <div class="input-group">
+                        <input class="form-control border-end-0 border" name="search" type="search" value="{{ search }}" id="example-search-input">
+                        <span class="input-group-append">
+                            <button class="btn btn-outline-secondary bg-white border-start-0 border-bottom-0 border ms-n5" type="submit">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </span>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="table-responsive mt-2">
+            <table class="table table-striped table-sm">
+            <thead>
+                <tr>
+                <th scope="col">Cod.</th>
+                <th scope="col">Nombre</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for p in profesores %}
+                    <tr>
+                        <td>{{ p.id_profesor }}</td>
+                        <td>{{ p.nombre_profesor }}</td>
+                        <td><button type="button" class="btn btn-danger">Eliminar</button>
+                            <button type="button" class="btn btn-warning">Editar</button>
+                        </td>
+                    </tr>
+                    
+                    
+
+                {% endfor %}
+            </tbody>
+            </table>
+        </div>
         </main>
     </div>
     </div>
