--- a/django-backend/templates/panel/confirm_delete_profesor.html
+++ b/django-backend/templates/panel/confirm_delete_profesor.html
@@ -1,9 +1,20 @@
 {% extends 'base.html' %}
 
-{% block container-main %}
-<h1>¿Estás seguro de que deseas eliminar este profesor?</h1>
-<form method="post">
-    {% csrf_token %}
-    <input type="submit" value="Eliminar">
-</form>
-{% endblock %}
+{% block container-main %}<div class="container-fluid">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-md-6 mt-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title text-center m-3">
+                            <h1>¿Estás seguro de que deseas eliminar este Profesor?</h1>
+                            <form method="post">
+                                {% csrf_token %}
+                                <input class="btn btn-success btn-lg" type="submit" value="Eliminar">
+                            </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endblock %}
